2007-09-20  Alexander Larsson  <alexl@redhat.com>

        * libnautilus-private/nautilus-directory-notify.h:
        * libnautilus-private/nautilus-directory.c:
	Add GFile versions of metadata scheduling functions.

2007-09-20  Alexander Larsson  <alexl@redhat.com>

        * libnautilus-private/nautilus-directory-notify.h:
        * libnautilus-private/nautilus-directory.c:
	Add GFile versions:
         nautilus_directory_notify_files_changed
         nautilus_directory_notify_files_removed

2007-09-20  Alexander Larsson  <alexl@redhat.com>

        * libnautilus-private/nautilus-directory-private.h:
        * libnautilus-private/nautilus-directory.c:
        * libnautilus-private/nautilus-file.c:
	Avoid for_location suffix when its not needed anymore

2007-09-20  Alexander Larsson  <alexl@redhat.com>

        * libnautilus-private/nautilus-directory.c:
	Add _by_uri suffix to uri versions of functions and
	remove suffix for GFile versions
	
2007-09-20  Alexander Larsson  <alexl@redhat.com>

        * libnautilus-private/nautilus-directory-notify.h:
        * libnautilus-private/nautilus-directory.c:
        * libnautilus-private/nautilus-file-changes-queue.c:
        * libnautilus-private/nautilus-link-desktop-file.c:
        * libnautilus-private/nautilus-merged-directory.c:
	Rename notify functions that work on uris to _by_uri and
	the GFile ones to have no suffix

2007-09-20  Alexander Larsson  <alexl@redhat.com>

	* libnautilus-private/nautilus-metafile.c: 
        * libnautilus-private/nautilus-directory.[ch]:
	Remove unused function nautilus_directory_make_uri_canonical
	
2007-09-20  Alexander Larsson  <alexl@redhat.com>

        * libnautilus-private/nautilus-directory-notify.h:
        * libnautilus-private/nautilus-directory.c:
	Added nautilus_directory_notify_files_moved_by_location and
	made nautilus_directory_notify_files_moved use that.

2007-09-20  Alexander Larsson  <alexl@redhat.com>

        * libnautilus-private/nautilus-directory-notify.h: